--- a/news portal.html
+++ b/news portal.html
@@ -13,27 +13,8 @@
             </th>
             <th align="center"width="75%" height="50px" ><h1 style="color:black;">MD. ABU HOSSAIN MOHALDER </h1></th>
 			<th width="400px" height="100px">
-			    <p align="center"style="color:black;">
-    <script>
-        function updateDate() {
-            const dateElement = document.getElementById('date');
-            const now = new Date();
-            const options = { year: 'numeric', month: 'long', day: 'numeric' };
-            dateElement.innerText = now.toLocaleDateString(undefined, options);
-        }
-
-        // Update the date immediately when the page loads
-        window.onload = updateDate;
-        // Optional: Update the date every 24 hours
-        setInterval(updateDate, 24 * 60 * 60 * 1000);
-    </script>
-
-
-    <h1>Today's Date:</h1>
-    <p id="date"></p>
- </p>
+			    <p align="center"style="color:black;"">Sunday,28 April 2024</p>	    
 				<form action="" method="GET">
-				 
 				<input type="text" name="search" placeholder="Search here">
 				</form>
 				
